--- a/ia_analysis.ipynb
+++ b/ia_analysis.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an extremely simple analysis of the length of videos uploaded to the Internet Archive. The focus of the exercise was in learning how to use the Internet Archive's JSON API to create the dataset that I wanted. "
+    "This is an extremely simple analysis of the length of videos uploaded to the Internet Archive. The focus of the exercise was in learning how to use the Internet Archive's JSON API to create the dataset that I wanted. \n",
+    "\n",
+    "At present, this is based on videos uploaded from June 1, 2024 through June 20, 2024 becaue that is all I have scraped so far. "
    ]
   },
   {
